--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -3,6 +3,6 @@ applications:
 - name: pal-tracker-production
   path: src/PalTracker/bin/Release/netcoreapp2.1/publish/
   routes:
-  - route: msg-pal-tracker.apps.pikes.pal.pivotal.io
+  - route: msg-pal-tracker-nischal-prod.cfapps.io
   env:
     WELCOME_MESSAGE: Hello from the production environment
